--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,7 +24,7 @@ steps:
       - "-c"
       - |
         gcloud run deploy $_SERVICE_NAME \
-          --image gcr.io/$_PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA-proxy \  # Ensure to deploy the proxy image
+          --image gcr.io/$_PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA-proxy \ 
           --region $_DEPLOY_REGION \
           --platform $_PLATFORM \
           --allow-unauthenticated  # Consider security implications
