--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,9 +24,9 @@ steps:
       - "-c"
       - |
         gcloud run deploy $_SERVICE_NAME \
-          --image gcr.io/$_PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA-proxy \ 
+          --image gcr.io/$_PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA-proxy \
           --region $_DEPLOY_REGION \
           --platform $_PLATFORM \
-          --allow-unauthenticated  # Consider security implications
+          --allow-unauthenticated
 options:
   logging: CLOUD_LOGGING_ONLY
