cloud build test

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,7 +24,7 @@ steps:
       - "-c"
       - |
         gcloud run deploy $_SERVICE_NAME \
-          --image gcr.io/$_PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA-proxy \
+          --image gcr.io/$_PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA \
           --region $_DEPLOY_REGION \
           --platform $_PLATFORM \
           --allow-unauthenticated
